--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.7.2; python_version >= '3.7'
 django==5.0; python_version >= '3.10'
 django-cors-headers==4.3.1; python_version >= '3.8'
 djangorestframework==3.14.0; python_version >= '3.6'
+gunicorn==21.2.0; python_version >= '3.5'
+packaging==23.2; python_version >= '3.7'
 pytz==2023.3.post1
 sqlparse==0.4.4; python_version >= '3.5'
 tzdata==2023.3; sys_platform == 'win32'
