--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 -i https://pypi.org/simple
 asgiref==3.7.2; python_version >= '3.7'
+cffi==1.16.0; platform_python_implementation == 'CPython' and sys_platform == 'win32'
 django==5.0; python_version >= '3.10'
 django-cors-headers==4.3.1; python_version >= '3.8'
 djangorestframework==3.14.0; python_version >= '3.6'
+gevent==23.9.1; python_version >= '3.8'
+greenlet==3.0.2; python_version >= '3.11' and platform_python_implementation == 'CPython'
 gunicorn==21.2.0; python_version >= '3.5'
 packaging==23.2; python_version >= '3.7'
+pycparser==2.21
 pytz==2023.3.post1
+setuptools==69.0.2; python_version >= '3.8'
 sqlparse==0.4.4; python_version >= '3.5'
 tzdata==2023.3; sys_platform == 'win32'
+waitress==2.1.2; python_full_version >= '3.7.0'
+zope.event==5.0; python_version >= '3.7'
+zope.interface==6.1; python_version >= '3.7'
